# myblindtest

./: .gitignore  AGENTS.md  README.md  TODO.md  docker-compose.yaml  helper.ipynb  package.json  songs.csv  test.json
blindtest/: .dockerignore  .env.example  Dockerfile  Pipfile  README.md  _wiki  conftest.py  django-enrich.ipynb  django-init.ipynb  django-query.ipynb  init.ipynb  manage.py  pyproject.toml  pytest.toml  query.ipynb  requirements.txt
blindtest/answers/: admin.py  models.py
blindtest/blindtest/: asgi.py  celery_app.py  deepseek.py  forms.py  schema.py  settings.py  typings.py  urls.py  validators.py  views.py  wsgi.py
blindtest/blindtest/api/: spotify.py
blindtest/blindtest/rapidapi/: client.py
blindtest/blindtest/tests/: test_api.py  test_youtube_search.py
blindtest/blindtest/youtube_search/: query.py
blindtest/examples/: albums.json
blindtest/games/: admin.py  models.py  tasks.py
blindtest/locale/fr/LC_MESSAGES/: django.po
blindtest/media/: ThemeSong-2025-11-21.csv  artists.json  base_artists.csv  base_artists_v1.csv  base_artists_v2.csv  base_artists_v3.csv  base_artists_v4.csv  base_artists_v5.csv  base_songs.csv  base_songs_v1.csv  base_songs_v2.csv  base_songs_v3.csv  base_theme_songs_v2.csv  base_tv_shows_v2.csv  genres.json
blindtest/songs/: admin.py  choices.py  completion.py  consumers.py  logic.py  managers.py  mcp.py  models.py  processors.py  routing.py  schema.py  song_typings.py  tasks.py  tests.py  typings.py  urls.py  utils.py  validators.py  wikipedia.py
blindtest/songs/api/: serializers.py  urls.py  views.py
blindtest/songs/consumers/: admin.py  smartphone.py  television.py
blindtest/songs/fixtures/: songs.json
blindtest/songs/game_logic/: __init__.py  base.py  managers.py  statistics.py
blindtest/songs/logic/: _jokers.py  base.py  base_models.py
blindtest/songs/migrations/: 0001_initial.py  0002_alter_artist_genre.py  0002_alter_song_created_on_alter_song_genre.py  0003_popsong_song_unique_song_per_artist.py  0003_remove_song_spotify_avatar_remove_song_spotify_id.py  0004_rapsong_alter_popsong_options_alter_song_options_and_more.py  0004_remove_song_artist_name_artist_birthname_and_more.py  0005_artist_wikipedia_page.py  0005_remove_song_diffulty_hard_song_diffulty_hard.py  0006_popartist_rapartist_alter_artist_options_and_more.py  0006_remove_song_diffulty_hard_song_diffulty_hard.py  0007_afrosong.py  0007_alter_song_difficulty.py  0008_song_youtube_id_alter_song_genre.py  0009_remove_song_youtube.py  0010_song_spotify_avatar_song_spotify_id.py  0011_artist.py  0011_incompleteartist_latinsong_artist_founding_year_and_more.py  0012_alter_artist_name.py
blindtest/songs/tests/: test_admin_consumer.py  test_api.py  test_completion.py  test_game_logic.py  test_jokers.py  test_others.py  test_player_consumer.py  test_utils.py  utils.py
blindtest/templates/: base.html  base_site.html  home.html  search.html
blindtest/tvshows/: admin.py  apps.py  mcp.py  models.py  schema.py
blindtest/tvshows/migrations/: 0003_themesong_difficulty_themesong_genre_and_more.py
services/blindtest/: .env.example  conftest.py  django-enrich.ipynb  pyproject.toml
services/blindtest/blindtest/: __init__.py  urls.py  views.py
services/blindtest/fixtures/: artists.json
services/blindtest/games/: admin.py  models.py
services/blindtest/media/: base_artists_v1.csv  base_tv_shows_v2.csv  songs.json
services/blindtest/songs/: _logic  admin.py  choices.py  completion.py  managers.py  mcp.py  models.py  processors.py  schema.py
services/blindtest/staticfiles/: staticfiles.json
services/blindtest/templates/: base.html  base_site.html  link.html
services/blindtest/tvshows/: admin.py  models.py  rapidapi.py  tasks.py
(+516 files in other folders)
