[project]
name = "blindtest"
version = "1.0.0-alpha.7"
description = "A Django-based web application for blind testing and data analysis."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "autobahn==22.4.2",
    "autopep8>=2.3.2",
    "celery>=5.6.2",
    "certifi>=2026.2.25",
    "channels-redis>=4.3.0",
    "channels[daphne]>=4.3.2",
    "daphne>=4.2.1",
    "django>=6.0.3",
    "django-celery-beat>=2.9.0",
    "django-cors-headers>=4.9.0",
    "django-debug-toolbar>=6.2.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-imagekit>=6.1.0",
    "django-import-export>=4.4.0",
    "django-mcp-server>=0.5.7",
    "django-oauth-toolkit>=3.2.0",
    "django-oauth-toolkit-dcr>=0.1.0",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "factory-boy>=3.3.3",
    "firebase-admin>=7.2.0",
    "googlesearch-python>=1.3.0",
    "graphene-django>=3.2.3",
    "httpx>=0.28.1",
    "kagglehub>=1.0.0",
    "levenshtein>=0.27.3",
    "nltk>=3.9.3",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic>=2.12.5",
    "pymemcache>=4.0.0",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "thefuzz>=0.22.1",
    "twisted[http2,tls]>=25.5.0",
    "unidecode>=1.4.0",
    "webdriver-manager>=4.0.2",
    "whitenoise>=6.12.0",
]
