[project]
name = "blindtest"
version = "1.0.0-alpha.7"
description = "A Django-based web application for blind testing and data analysis."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "autobahn==22.4.2",
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.2",
    "certifi>=2026.2.25",
    "channels-redis>=4.3.0",
    "channels[daphne]>=4.3.2",
    "daphne>=4.2.1",
    "django>=6.0.3",
    "django-celery-beat>=2.9.0",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-filter>=25.2",
    "django-imagekit>=6.1.0",
    "django-import-export>=4.4.0",
    "django-mcp-server>=0.5.7",
    "django-oauth-toolkit>=3.2.0",
    "django-oauth-toolkit-dcr>=0.1.0",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "firebase-admin>=7.2.0",
    "graphene-django>=3.2.3",
    "httpx>=0.28.1",
    "kagglehub>=1.0.0",
    "levenshtein>=0.27.3",
    "nltk>=3.9.3",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic>=2.12.5",
    "pymemcache>=4.0.0",
    "pyotp>=2.9.0",
    "qrcode>=8.2",
    "rapidfuzz>=3.14.3",
    "thefuzz>=0.22.1",
    "twisted[http2,tls]>=25.5.0",
    "unidecode>=1.4.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "coverage>=7.14.0",
    "django-browser-reload>=1.21.0",
    "django-debug-toolbar>=6.3.0",
    "django-watchfiles>=1.4.0",
    "factory-boy>=3.3.3",
    "pytest>=9.0.3",
    "pytest-aio>=2.1.7",
    "pytest-celery>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-env>=1.6.0",
    "pytest-playwright>=0.8.0",
    "pytest-timeout>=2.4.0",
    "selenium>=4.44.0",
    "webdriver-manager>=4.1.1",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=djangobackend",
    "--cov-report=html:cov_html",
    "--cov-report=term-missing"
]

[tool.pyright]
typeCheckingMode = "off"
reportMissingImports = true
reportUntypedBaseClass = true

[tool.pytest_env]
env_files = [".env", ".env.test"]
